New features and bug fixes

--- a/EEDD/App.config
+++ b/EEDD/App.config
@@ -22,6 +22,12 @@
             <setting name="NightView" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Server" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Port" serializeAs="String">
+                <value>1024</value>
+            </setting>
         </EEDD.Settings>
     </userSettings>
 </configuration>
