--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,5 +1,7 @@
 {
   "PortEDD": 1024,
   "PortEVAL": 1025,
-  "DataDirectory": "Data"
+  "DataDirectory": "Data",
+  "Certificate": "Edd.pfx",
+  "CertificatePassword": ""
 }
