--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="EDD.der" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="EDD.der" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MessagePack" Version="3.1.3" />
     <PackageReference Include="NetCoreServer" Version="8.0.7" />
   </ItemGroup>
