--- a/EVAL/App.config
+++ b/EVAL/App.config
@@ -19,6 +19,12 @@
             <setting name="UpgradeRequired" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Server" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Port" serializeAs="String">
+                <value>1025</value>
+            </setting>
         </EVAL.Settings>
     </userSettings>
 </configuration>
