--- a/EVAL/Settings.settings
+++ b/EVAL/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="Server" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Port" Type="System.UInt16" Scope="User">
+      <Value Profile="(Default)">1025</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
