--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
-
+	
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>447f33b2-d956-46d2-8619-fc7982caef75</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,6 +20,9 @@
 
   <ItemGroup>
     <None Update="Data\Trat323.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="EDD.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
