--- a/EVAL/EVAL.csproj
+++ b/EVAL/EVAL.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="DeviceId" Version="6.8.0" />
     <PackageReference Include="DeviceId.Windows.Mmi" Version="6.8.0" />
+    <PackageReference Include="ModernWpfUI" Version="0.9.6" />
     <PackageReference Include="System.IO.Hashing" Version="9.0.2" />
   </ItemGroup>
 
