--- a/EEDD/EEDD.csproj
+++ b/EEDD/EEDD.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common.Controls\Common.Controls.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
