--- a/EVAL/EVAL.csproj
+++ b/EVAL/EVAL.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common.Controls\Common.Controls.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
